Fix warnings and some FindBugs issues.